# ros_control_course

my_robot_hardware_interface (1)/: CMakeLists.txt  my_robot_hardware_interface.xml  package.xml
my_robot_hardware_interface (1)/config/: controller_configuration.yaml
my_robot_hardware_interface (1)/include/my_robot_hardware_interface/: my_robot_hardware_interface.hpp
my_robot_hardware_interface (1)/launch/: bring_up_on_hardware.launch.py
my_robot_hardware_interface (1)/src/: my_robot_hardware_interface.cpp
ros2_control_course/: README.md
ros2_control_course/common/joint_trajectory_publisher/: package.xml  setup.cfg  setup.py
ros2_control_course/common/joint_trajectory_publisher/config/: lie_down_stand_up_publisher.yaml
ros2_control_course/common/joint_trajectory_publisher/joint_trajectory_publisher/: publisher_forward_position_controller.py  publisher_joint_trajectory_controller.py
ros2_control_course/common/joint_trajectory_publisher/launch/: joint_trajectory_publisher.launch.py  joint_trajectory_solo_push-ups.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
ros2_control_course/unit2/rrbot_unit2/: package.xml
ros2_control_course/unit2/rrbot_unit2/urdf/: rrbot.xacro
ros2_control_course/unit3/rrbot_unit3/: CMakeLists.txt  package.xml
ros2_control_course/unit3/rrbot_unit3/urdf/: rrbot.xacro
ros2_control_course/unit4/rrbot_unit4/urdf/: rrbot.xacro
ros2_control_course/unit5/diffbot_description/: CMakeLists.txt  package.xml
ros2_control_course/unit5/diffbot_description/launch/: diffbot_description.launch.py
ros2_control_course/unit5/diffbot_description/robots/: diffbot.gazebo.xacro  diffbot.ros2_control.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro
ros2_control_course/unit5/diffbot_sim/: CMakeLists.txt  package.xml
ros2_control_course/unit5/diffbot_sim/launch/: diffbot_controllers.launch.py  diffbot_spawn.launch.py
ros2_control_course/unit5/rrbot_unit5/: CMakeLists.txt  package.xml
ros2_control_course/unit5/spawn_robot/: CMakeLists.txt  package.xml
ros2_control_course/unit6/solo_description/: CMakeLists.txt  package.xml
ros2_control_course/unit6/spawn_solo/: CMakeLists.txt  package.xml
ros2_control_course/unit6/spawn_solo/launch/: spawn_solo.launch.py
rrbot_controller/: CMakeLists.txt  package.xml  rrbot_controller.xml
rrbot_controller/config/: rrbot_controllers_custom.yaml
rrbot_controller/include/rrbot_controller/: rrbot_controller.hpp
rrbot_controller/src/: rrbot_controller.cpp
(+10 files in other folders)
